fixed keypad buttons on safari

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,8 @@ span {
 }
 #mobileControls {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   gap: 5px;
 }
 
